--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -323,7 +323,7 @@
 % Rule name in a grammar
 \newcommand{\regleGrammaire}[1]{\bigskip \noindent \nt{#1} :: \\}
 % Not taken into account in the grammar
-\newcommand{\npec}[1]{\textcolor{green!50!black}{#1}}
+% \newcommand{\npec}[1]{\textcolor{green!50!black}{#1}}
 
 \newcommand{\probleme}[2]{
 	\medskip
