Finish grammar, and reread the whole manual

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -207,7 +207,7 @@
 \newcommand{\Tprime}{T}
 
 % Symboles
-\newcommand{\emptystring}{$\epsilon$}
+\newcommand{\emptystring}{\ensuremath{\epsilon}}
 \newcommand{\fleche}[1]{\stackrel{#1}{\rightarrow}}
 \newcommand{\Fleche}[1]{\stackrel{#1}{\Rightarrow}}
 % \newcommand{\steps}[0]{ {\rightarrow} }
