Update manual to v3 logos

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -69,8 +69,8 @@
 
 \fancyhead[r]{%
 	\includegraphics[height=1em]{../logos/imitator-500.png}
-	\includegraphics[height=1em]{../logos/logo2-300.png}
-	\includegraphics[height=1em]{../logos/logo2-12-300.png}
+	\includegraphics[height=1em]{../logos/logo-3-300.png}
+% 	\includegraphics[height=1em]{../logos/logo-2-12-300.png}
 }
 
 \renewcommand{\headrulewidth}{.1pt}
