--- a/doc/title_and_toc.tex
+++ b/doc/title_and_toc.tex
@@ -19,9 +19,9 @@
 	
 	\medskip
 	
-	\includegraphics[height=0.15\textwidth]{../logos/logo2-300.png}
+	\includegraphics[height=0.15\textwidth]{../logos/logo-3-300.png}
 % 	
-	\includegraphics[height=0.15\textwidth]{../logos/logo2-12-300.png}
+% 	\includegraphics[height=0.15\textwidth]{../logos/logo2-12-300.png}
 
 \end{center}
 
