Restrict -step for NDFS

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2022,13 +2022,8 @@ Warning: enabling this option may slightly slow down the analysis, and will cert
 %------------------------------------------------------------
 \paragraph{\styleOption{-step} (default: \styleOption{1})}
 %------------------------------------------------------------
-Step is used in two cases:
-\begin{itemize}
-	\item for the behavioral cartography :
-	      integers can be used, or rationals (in the form \styleOption{x/y}) ;
-	\item for iterative \styleOption{AccLoopSynthNDFS}, it indicates the step between
-	      two iterations.
-\end{itemize}
+Step is used for iterative \styleOption{AccLoopSynthNDFS}: it indicates the step between two iterations.
+
 
 %------------------------------------------------------------
 \paragraph{\styleOption{-sync-auto-detect} (default: false)}
